add new activity and layout

--- a/app/src/main/res/layout/company_details_item.xml
+++ b/app/src/main/res/layout/company_details_item.xml
@@ -3,36 +3,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingBottom="16dp">
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
+    android:paddingBottom="16dp"
+    android:paddingTop="16dp">
 
     <TextView
         android:id="@+id/txt_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:textSize="14sp"
         android:layout_alignParentStart="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:maxLines="1"
+        android:textSize="14sp"
         tools:text="Paula" />
+
+    <TextView
+        android:id="@+id/txt_today"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_toEndOf="@+id/txt_name"
+        android:layout_toRightOf="@+id/txt_name"
+        android:maxLines="1"
+        android:text="@string/today"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/txt_scheduling"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:textSize="14sp"
         android:layout_alignParentRight="true"
-        tools:text="8am | 11 am | 2pm | 6 pm" />
-
-    <TextView
-        android:id="@+id/txt_today"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="6dp"
-        android:textSize="14sp"
-        android:layout_toLeftOf="@+id/txt_scheduling"
-        android:layout_toStartOf="@+id/txt_scheduling"
+        android:layout_toEndOf="@+id/txt_today"
+        android:layout_toRightOf="@+id/txt_today"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:text="@string/available"
+        android:textSize="12sp"
         android:textStyle="bold"
-        tools:text="Today" />
+        tools:text="8am | 11 am | 2pm | 6 pm fdfdfd jfdjhfjdhfjdhfjdjfdhjfhdjhfjd fdfdfdfdfdfdf" />
+
 
 </RelativeLayout>
