--- a/app/src/main/res/layout/available_time_item.xml
+++ b/app/src/main/res/layout/available_time_item.xml
@@ -1,17 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="6dp">
+
 
     <TextView
         android:id="@+id/txt_available_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:textSize="16sp"
         android:textStyle="bold"
-        tools:text="13:00 pm" />
+        tools:text="13:00 pm"
+        tools:textColor="@android:color/holo_green_dark" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/txt_available"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_toEndOf="@+id/txt_available_time"
+        android:layout_toRightOf="@+id/txt_available_time"
+        android:textSize="12sp"
+        tools:text="available"
+        tools:textColor="@android:color/holo_red_dark" />
+
+
+</RelativeLayout>
