--- a/app/src/main/res/layout/company_details_item.xml
+++ b/app/src/main/res/layout/company_details_item.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:orientation="horizontal"
     android:paddingBottom="16dp"
     android:paddingTop="16dp">
 
@@ -14,9 +13,12 @@
         android:id="@+id/txt_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="start"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:gravity="center"
         android:maxLines="1"
         android:textSize="14sp"
         tools:text="Paula" />
@@ -28,7 +30,12 @@
         android:layout_gravity="center"
         android:layout_marginEnd="6dp"
         android:layout_marginRight="6dp"
-        android:maxLines="1"
+        android:layout_toEndOf="@+id/txt_name"
+        android:layout_toLeftOf="@+id/txt_scheduling"
+        android:layout_toRightOf="@+id/txt_name"
+        android:layout_toStartOf="@+id/txt_scheduling"
+        android:gravity="end"
+        android:singleLine="true"
         android:textSize="14sp"
         android:textStyle="bold"
         tools:text="@string/today" />
@@ -37,13 +44,18 @@
         android:id="@+id/txt_scheduling"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="6dp"
+        android:layout_marginRight="6dp"
         android:ellipsize="marquee"
+        android:gravity="center"
+        android:textAlignment="gravity"
         android:singleLine="true"
         android:text="@string/available"
         android:textSize="12sp"
         android:textStyle="bold"
-        tools:text="8am | 11 am | 2pm | 6 pm " />
+        tools:text="8am | 11 am | 2pm | 6 pm  8am 8am " />
 
 
-</LinearLayout>
+</RelativeLayout>
