--- a/app/src/main/res/layout/company_detail_activity.xml
+++ b/app/src/main/res/layout/company_detail_activity.xml
@@ -3,25 +3,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="16dp">
+    android:background="@color/grey_background">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/abc_action_bar_default_height_material"
+        android:background="?attr/colorPrimary"
+        android:minHeight="@dimen/abc_action_bar_default_height_material" />
 
     <TextView
         android:id="@+id/txt_phone_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/phone"
+        android:textColor="@color/black_54A"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/txt_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:layout_toEndOf="@+id/txt_phone_label"
         android:layout_toRightOf="@+id/txt_phone_label"
+        android:textColor="@color/black_54A"
         tools:text="(11) 7509-9999" />
 
     <TextView
@@ -33,6 +46,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="6dp"
         android:text="@string/address"
+        android:textColor="@color/black_54A"
         android:textStyle="bold" />
 
     <TextView
@@ -47,6 +61,7 @@
         android:layout_marginTop="6dp"
         android:layout_toEndOf="@+id/txt_address_label"
         android:layout_toRightOf="@+id/txt_address_label"
+        android:textColor="@color/black_54A"
         tools:text="Rua São Joaquim, 444 Liberdade - São Paulo" />
 
 
@@ -58,6 +73,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:text="@string/professionals"
+        android:textColor="@color/black_54A"
         android:textSize="26sp"
         android:textStyle="bold" />
 
