--- a/app/src/main/res/layout/widget_schedule_item.xml
+++ b/app/src/main/res/layout/widget_schedule_item.xml
@@ -17,6 +17,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:gravity="start|center_vertical"
+            android:textColor="@color/black_54A"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:text="Ana Amorin" />
@@ -31,6 +32,7 @@
             android:paddingLeft="3dp"
             android:paddingRight="3dp"
             android:paddingStart="3dp"
+            android:textColor="@color/black_54A"
             android:textSize="12sp"
             tools:text="15:00" />
 
@@ -42,6 +44,7 @@
             android:layout_marginRight="10sp"
             android:layout_toLeftOf="@+id/txt_hour"
             android:layout_toStartOf="@+id/txt_hour"
+            android:textColor="@color/black_54A"
             android:textSize="14sp"
             tools:text="18/05/2017" />
 
